plugins {
    id 'java'
}

description = "Mockito preconfigured inline mock maker (intermediate and to be superseeded by automatic usage in a future version)"

apply from: "$rootDir/gradle/dependencies.gradle"

sourceCompatibility = 11
targetCompatibility = 11

dependencies {
    implementation project.rootProject
    testImplementation libraries.junit4
    testImplementation libraries.assertj
}

tasks.javadoc.enabled = false

test {
    jvmArgs '--illegal-access=deny'
    //required by the "StressTest.java" and "OneLinerStubStressTest.java"
    maxHeapSize '256m'
}
